--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: counterswithcolornames
+name: counters_with_color_names
 description: A new Flutter application.
 
 # The following line prevents the package from being accidentally published to
