--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: counters_with_color_names
-description: "A new Flutter project."
+description: A simple tally counter app with 11 distinct counters, one for each basic color. Easily increment, decrement, reset, and share your counts.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
