--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,17 @@
 {
   "files.eol": "\n",
-  "editor.rulers": [
-    80,100,120
-  ],
-  "dart.lineLength": 100,
   "editor.tabSize": 2,
+  "editor.rulers": [
+    80,
+    100,
+    120
+  ],
+  "[dart]": {
+    "editor.rulers": [
+      80,
+      100,
+      120
+    ],
+  },
+  "dart.lineLength": 100,
 }
